--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -275,7 +275,8 @@ tbody tr:nth-child(odd) th {
 .masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
-  margin-bottom: 3rem;
+  /*margin-bottom: 3rem;*/
+  /*margin-bottom: 1rem;*/
 }
 .masthead-title {
   margin-top: 0;
