--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 
-<div class="posts">
-<h3>New</h3>
+<h2>News</h2>
 <ul>
-  {% for post in site.posts limit: 3 %}
+  {% for post in site.posts %}
   <li>
   <span class="datelabel">{{ post.date | date: "%B %d, %Y" }}:</span>
       <a href="{{ post.url }}">{{ post.title }}</a>.
@@ -13,11 +12,5 @@ layout: default
     </li>
   {% endfor %}
 </ul>
-
-<a href="/news">All news</a>
 </div>
-
-
-
-{{ content }}
 
