--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<h2>News</h2>
+<h2>Older news</h2>
 <ul>
-  {% for post in site.posts %}
+  {% for post in site.posts offset:2 %}
   <li>
   <span class="datelabel">{{ post.date | date: "%B %d, %Y" }}:</span>
       <a href="{{ post.url }}">{{ post.title }}</a>.
